# Detached from the parent workspace on purpose: bevy pulls ~400 crates and we
# don't want that in the main Cargo.lock. This is a throwaway spike to de-risk a
# native (Rust + bevy) campath tool — parse a demo, render map + players at a tick,
# free-fly camera. Nothing here is meant to be production.
[package]
name = "hlae-campath-previewer"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Same crate the web app's wasm parser is built from, and already used natively
# in ../tf-log-demo-aligner. GameStateAnalyser gives us per-tick player positions.
tf-demo-parser = "0.6.4"
anyhow = "1"

# Trim default features: drop audio (avoids an alsa system-lib dep on the target)
# but keep rendering, gltf, winit, and x11 so the binary runs on a normal desktop.
[dependencies.bevy]
version = "0.14"
default-features = false
features = [
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_gizmos",
  "bevy_render",
  "png",
  "jpeg",
  "ktx2",
  "zstd",
  "tonemapping_luts",
  "x11",
  "multi_threaded",
]

# A spike still benefits from an optimized parse + render; opt the deps up.
[profile.dev.package."*"]
opt-level = 3
