[package]
name = "hlae-campath-previewer"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tf-demo-parser = "0.6.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bevy_egui = { version = "0.28", default-features = false, features = ["render", "default_fonts"] }
rfd = "0.14"
roxmltree = "0.20"

# Trim default features: drop audio (avoids an alsa system-lib dep on the target)
# but keep rendering, gltf, winit, and x11 so the binary runs on a normal desktop.
[dependencies.bevy]
version = "0.14"
default-features = false
features = [
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_gizmos",
  "bevy_render",
  "png",
  "jpeg",
  "ktx2",
  "zstd",
  "tonemapping_luts",
  "x11",
  "multi_threaded",
]

[profile.dev.package."*"]
opt-level = 3
